[package]
name = "valkyrie"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2.14"
num-integer = "0.1"
rand = "0.8"
stingray = { git = "https://github.com/myrkgard/stingray" }
oyster = { git = "https://github.com/myrkgard/oyster" }
firescout = { git = "https://github.com/myrkgard/firescout" }
